# OmanClimate

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: methodology.md
notebooks/: compare_era5_ghcn.py  explore.py
pipeline/: __init__.py  cli.py  stations.py
pipeline/analysis/: __init__.py  heatwaves.py  personal.py  seasons.py  sst.py  story_metrics.py  trends.py
pipeline/diagnostics/: __init__.py  rural.py  step_changes.py  windows.py
pipeline/fetch/: ghcn.py  open_meteo.py  sst.py
pipeline/process/: aggregates.py  common_schema.py  era5.py  ghcn.py  sst.py  stations.py  timezones.py  wet_bulb.py
pipeline/viz/: __init__.py  _common.py  diagnostics.py  heatwave_counts.py  oman_outline.py  personal_climate.py  social_preview.py  sst.py  station_map.py  stations.py  story_metrics.py  style.py  summer_season.py  threshold_hours.py  trend.py  (+1 more)
site/: index.html  personal-climate-data.js  sst-data.js  station-map-data.js  story-metrics-data.js
tests/: test_aggregates.py  test_analysis_heatwaves.py  test_analysis_seasons.py  test_analysis_trends.py  test_cli_ghcn.py  test_cli_stations.py  test_common_schema.py  test_deployment.py  test_diagnostics.py  test_docs_surface.py  test_ghcn_fetch.py  test_ghcn_process.py  test_open_meteo.py  test_personal_climate.py  test_site_outputs.py  test_sst_analysis.py  test_sst_fetch.py  test_sst_processing.py  test_station_map.py  test_station_processing.py  test_stations.py  test_story_metrics.py  test_timezones.py  test_viz_smoke.py  test_viz_stations.py  test_wet_bulb.py
