[project]
name = "oman-climate"
version = "0.1.0"
description = "Long-term climate analysis of Oman from Open-Meteo reanalysis data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "pandas>=2.2",
    "pyarrow>=15",
    "numpy>=1.26",
    "requests>=2.32",
    "urllib3>=2",
    "scipy>=1.17.1",
    "xarray>=2025.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "requests-mock>=1.12",
    "jupyter",
    "matplotlib",
]

[project.scripts]
oman-climate = "pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
